<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderProcessActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <Button
                android:id="@+id/btn_burger_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_burger_menu"
                android:textColor="@color/colorGunmetal" />

        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@id/toolbar"
            android:layout_alignBottom="@+id/toolbar"
            android:background="@color/colorBeige" />

        <include layout="@layout/layout_logo" />

        <ImageView
            android:id="@+id/order_status"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/layout_logo"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/str_order_status_icon" />

        <TableLayout
            android:id="@+id/order_info"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_status"
            android:layout_centerHorizontal="true">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/amatic_sc"
                    android:text="@string/str_order"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amatic_sc"
                    android:textColor="@color/colorLight"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row_voucher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/amatic_sc"
                    android:text="@string/str_voucher"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/voucher_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amatic_sc"
                    android:textColor="@color/colorLight"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/text_order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/amatic_sc"
                    android:text="@string/str_total"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amatic_sc"
                    android:textColor="@color/colorLight"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/order_error"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/order_status"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:fontFamily="@font/amatic_sc"
            android:text="@string/str_invalid_order"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <include layout="@layout/layout_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>