<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="3"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/left_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorBeige" />

        </RelativeLayout>

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/amatic_sc"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textSize="90sp" />

        <RelativeLayout
            android:id="@+id/right_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorBeige" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/inputs_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/text_login_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/amatic_sc"
            android:labelFor="@id/input_login_nickname"
            android:padding="6dp"
            android:text="@string/str_nickname"
            android:textColor="@color/colorBeige"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_login_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/text_login_nickname"
            android:autofillHints=""
            android:background="@drawable/background_input_text"
            android:ems="10"
            android:fontFamily="@font/amatic_sc"
            android:inputType="textShortMessage"
            android:padding="10dp"
            android:textColor="@color/colorLight"
            android:textColorHighlight="@color/colorLight"
            android:textColorLink="@color/colorLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_login_nickname"
            android:fontFamily="@font/amatic_sc"
            android:labelFor="@id/input_login_password"
            android:padding="6dp"
            android:text="@string/str_password"
            android:textColor="@color/colorBeige"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/text_login_password"
            android:autofillHints=""
            android:background="@drawable/background_input_text"
            android:ems="10"
            android:fontFamily="@font/amatic_sc"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorLight"
            android:textColorHighlight="@color/colorLight"
            android:textColorLink="@color/colorLight" />

        <Button
            android:id="@+id/btn_login_action"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:layout_below="@id/input_login_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_button"
            android:fontFamily="@font/amatic_sc"
            android:text="@string/str_login"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>